--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   crypto: ^3.0.1
   shared_preferences: ^2.0.6
   intl: ^0.17.0
+  prompt_dialog: ^1.0.3
 
 dev_dependencies:
   flutter_test:
