--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl: ^0.17.0
   flutter_circle_color_picker: ^0.3.0
   flutter_riverpod: ^0.14.0+3
+  flutter_typeahead: ^3.2.0
 
 dev_dependencies:
   flutter_test:
