--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_circle_color_picker: ^0.3.0
   flutter_riverpod: ^0.14.0+3
   flutter_typeahead: ^3.2.0
+  image_picker: ^0.8.3+2
 
 dev_dependencies:
   flutter_test:
