--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_riverpod: ^0.14.0+3
   flutter_typeahead: ^3.2.0
   image_picker: ^0.8.3+2
+  flutter_slidable: ^0.6.0
 
 dev_dependencies:
   flutter_test:
